<resources>
    <string name="app_name">Twitter</string>
    <string name="str_intro_text">See what\'s happening in the world right now</string>
    <string name="str_create_account">Create account</string>
    <string name="str_have_account">Have an account already?</string>
    <string name="str_log_in">Log in</string>
    <string name="str_create_your_account">Create your account</string>
    <string name="str_customize_your_account">Customize your experience</string>
    <string name="str_track_your_account">Track where you see Twitter content across the web</string>
    <string name="str_customize_your_accounts">Twitter uses this data to personalize your experience.
              \n\This web browsing history will never be stored\n\ with your name, email, or phone number</string>
    <string name="str_name">Name</string>
    <string name="str_register">
        By signing up, you agree to the Terms
        of Service and Privacy Policy, including
        Cookie Use. Others will be able to find you
        by email or phone number when provided.
        Privacy Options
    </string>
    <string name="str_syncconotacts">
        Contacts from your address book will be uploaded to Twitter on an ongoing
        basis to help connect you with your friends and personalize content, such
        as making suggestions for you and others. You can turn off syncing and
        remove previously uploaded contacts in your settings. Learn more
    </string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_next">Next</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="str_log_in_to_twitter">Log in to Twitter.</string>
</resources>
