<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="?backgroundColor"
        android:id="@+id/customize_toolbar"
        android:theme="@style/Toolbar"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_twitter"
            android:layout_gravity="center"
            android:tint="@color/twitterBlue"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_create_account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/str_create_your_account" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/et_name"
            android:hint="@string/str_name"
            android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:hint="@string/str_email"
            android:textColor="@color/colorBlack" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:orientation="vertical"
        android:layout_marginTop="260dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_register"
            android:textColor="@color/colorBlack"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="wrap_content"
            android:text="@string/str_signup"
            android:id="@+id/btn_register"
            android:background="@drawable/btn_round_blue"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>



</RelativeLayout>