<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    tools:context=".CustomizeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:background="?backgroundColor"
        android:id="@+id/customize_toolbar"
        android:theme="@style/Toolbar"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_twitter"
            android:layout_gravity="center"
            android:tint="@color/twitterBlue"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/tv_customize_account"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/customize_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_create_account"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/str_customize_your_account" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chk_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_customize_account"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/txt_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_track_your_account"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txt_track">

          <TextView
              android:id="@+id/txt_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:text="@string/str_customize_your_accounts"
              android:textStyle="bold"
             >


          </TextView>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="41dp"
            android:layout_height="19dp"
            android:layout_below="@+id/txt_track"
            android:checked="true"
            android:layout_marginTop="10dp"
            />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/chk_track"
        android:layout_marginTop="70dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="391dp"
            android:layout_height="34dp"
            android:text="For more details about these settings, visit the"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="304dp"
            android:layout_marginLeft="304dp"
            android:textColor="@color/twitterBlue"
            android:text="Help Center"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/layout_top_line_only"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="40dp"
            android:text="@string/str_next"
            android:id="@+id/btn_customize"
            android:background="@drawable/btn_round_blue"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>



</RelativeLayout>